--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@ clevertap.onUserLogin.push({
 <div class="footer">
   <h2> © Rashmi Yadav</h2>
 </div>
-
+<script src="notification_prompt.js"></script>
 </body>
 </html>
