--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ clevertap.onUserLogin.push({
 </div>
 
 <div class="navbar">
-  <a href="login.html" class="active">Home</a>
+  <a href="index.html" class="active">Home</a>
   <a href="about.html" class="active">About Me</a>
   <a href="login.html" class="active">Login</a>
   <!-- <a href="#">Link</a> -->
