--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       okButtonText: 'Sign me up!',
       rejectButtonText: 'No thanks',
       okButtonColor: '#f28046',
-      serviceWorkerPath: 'clevertap_sw.js'
+      serviceWorkerPath: 'clevertap_sw.js', 
+      "skipdailog":true
     });
   </script>
 
