--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       rejectButtonText: 'No thanks',
       okButtonColor: '#f28046',
       serviceWorkerPath: 'clevertap_sw.js', 
-      "skipdailog":true
+      "skipDialog":true
     });
   </script>
 
