--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
   <!-- CleverTap opt-in popup config (push into stub array) -->
-  <script>
+  <!-- <script>
     clevertap.notifications.push({
       titleText: 'Would you like to receive Push Notifications?',
       bodyText: 'We promise to only send you relevant content and give you updates on your transactions',
@@ -110,7 +110,7 @@
       okButtonColor: '#f28046',
       serviceWorkerPath: 'clevertap_sw.js', 
      //"skipDialog":true
-    });
+    }); -->
   </script>
 
   <!-- Notification permission watcher: immediate log, Permissions API event, and fallback polling -->
